--- a/manuscript/ipcoal-biorxiv.bib
+++ b/manuscript/ipcoal-biorxiv.bib
@@ -10,6 +10,28 @@
 	file = {Full Text PDF:/home/deren/Zotero/storage/UA52IGN5/Kluyver et al. - 2016 - Jupyter Notebooks - a publishing format for reprod.pdf:application/pdf}
 }
 
+
+
+@article{eaton_toytree_2020,
+	title = {Toytree: {A} minimalist tree visualization and manipulation library for {Python}},
+	volume = {11},
+	copyright = {© 2019 The Author. Methods in Ecology and Evolution © 2019 British Ecological Society},
+	issn = {2041-210X},
+	shorttitle = {Toytree},
+	url = {https://besjournals.onlinelibrary.wiley.com/doi/abs/10.1111/2041-210X.13313},
+	doi = {10.1111/2041-210X.13313},
+	abstract = {Toytree is a lightweight Python library for programmatically visualizing and manipulating tree-based data structures. It implements a minimalist design aesthetic and modern plotting architecture suited for interactive coding in IPython/Jupyter. Tree drawings are generated in HTML using the toyplot library backend, and display natively in Jupyter notebooks with interactivity features. Tree drawings can be combined with other plotting functions from the toyplot library (e.g. scatterplots, histograms) to create composite figures on a shared coordinate grid, and can be exported to additional formats including PNG, PDF and SVG. To parse and store tree data, toytree uses a modified fork of the ete3 TreeNode object, which includes functions for manipulating, annotating and comparing trees. Toytree integrates these functions with a plotting layout to allow node values to be extracted from trees in the correct order to style nodes for plotting. In addition, toytree provides functions for parsing additional tree formats, generating random trees, inferring consensus trees and drawing grids or clouds from multiple trees to visualize discordance. The goal of toytree is to provide a simple Python equivalent to commonly used tree manipulation and plotting libraries in R, and in doing so, to promote further development of phylogenetic and other tree-based methods in Python. Toytree is released under the GPLv3 license. Source code is available on GitHub and documentation is available at https://toytree.readthedocs.io.},
+	language = {en},
+	number = {1},
+	urldate = {2020-01-15},
+	journal = {Methods in Ecology and Evolution},
+	author = {Eaton, Deren A. R.},
+	year = {2020},
+	keywords = {coalescent, evolution, genetics, IPython, jupyter, notebooks, phylogeny, toyplot},
+	pages = {187--191},
+	file = {Full Text PDF:/home/deren/Zotero/storage/G7UTE4AR/Eaton - 2020 - Toytree A minimalist tree visualization and manip.pdf:application/pdf;Snapshot:/home/deren/Zotero/storage/SPBG3TPH/2041-210X.html:text/html}
+}
+
 @article{kelleher_efficient_2016,
 	title = {Efficient {Coalescent} {Simulation} and {Genealogical} {Analysis} for {Large} {Sample} {Sizes}},
 	volume = {12},
@@ -150,23 +172,6 @@
 	file = {Full Text PDF:/home/deren/Zotero/storage/QGMMSHXX/Hudson - 2002 - Generating samples under a Wright–Fisher neutral m.pdf:application/pdf;Snapshot:/home/deren/Zotero/storage/BYJ8RK5N/225783.html:text/html}
 }
 
-@article{eaton_toytree_nodate,
-	title = {Toytree: {A} minimalist tree visualization and manipulation library for {Python}},
-	volume = {n/a},
-	copyright = {© 2019 The Author. Methods in Ecology and Evolution © 2019 British Ecological Society},
-	issn = {2041-210X},
-	shorttitle = {Toytree},
-	url = {https://besjournals.onlinelibrary.wiley.com/doi/abs/10.1111/2041-210X.13313},
-	doi = {10.1111/2041-210X.13313},
-	abstract = {Toytree is a lightweight Python library for programmatically visualizing and manipulating tree-based data structures. It implements a minimalist design aesthetic and modern plotting architecture suited for interactive coding in IPython/Jupyter. Tree drawings are generated in HTML using the toyplot library backend, and display natively in Jupyter notebooks with interactivity features. Tree drawings can be combined with other plotting functions from the toyplot library (e.g. scatterplots, histograms) to create composite figures on a shared coordinate grid, and can be exported to additional formats including PNG, PDF and SVG. To parse and store tree data, toytree uses a modified fork of the ete3 TreeNode object, which includes functions for manipulating, annotating and comparing trees. Toytree integrates these functions with a plotting layout to allow node values to be extracted from trees in the correct order to style nodes for plotting. In addition, toytree provides functions for parsing additional tree formats, generating random trees, inferring consensus trees and drawing grids or clouds from multiple trees to visualize discordance. The goal of toytree is to provide a simple Python equivalent to commonly used tree manipulation and plotting libraries in R, and in doing so, to promote further development of phylogenetic and other tree-based methods in Python. Toytree is released under the GPLv3 license. Source code is available on GitHub and documentation is available at https://toytree.readthedocs.io.},
-	language = {en},
-	number = {n/a},
-	urldate = {2020-01-11},
-	journal = {Methods in Ecology and Evolution},
-	author = {Eaton, Deren A. R.},
-	keywords = {genetics, evolution, phylogeny, IPython, coalescent, jupyter, notebooks, toyplot},
-	file = {Full Text PDF:/home/deren/Zotero/storage/L9HRBWGL/Eaton - Toytree A minimalist tree visualization and manip.pdf:application/pdf;Snapshot:/home/deren/Zotero/storage/Q47HVPE3/2041-210X.html:text/html}
-}
 
 @article{adrion_community_maintained_2019,
 	title = {A community-maintained standard library of population genetic models},
