--- a/manuscript/ipcoal-biorxiv.bib
+++ b/manuscript/ipcoal-biorxiv.bib
@@ -327,3 +327,35 @@ year = {2011}
 	eprint = {https://science.sciencemag.org/content/328/5979/710.full.pdf},
 	journal = {Science}
 }
+
+@article{chifman_quartets_2014,
+    author = {Chifman, Julia and Kubatko, Laura},
+    title = "{Quartet Inference from SNP Data Under the Coalescent Model}",
+    journal = {Bioinformatics},
+    volume = {30},
+    number = {23},
+    pages = {3317-3324},
+    year = {2014},
+    month = {08},
+    abstract = "{Motivation: Increasing attention has been devoted to estimation of species-level phylogenetic relationships under the coalescent model. However, existing methods either use summary statistics (gene trees) to carry out estimation, ignoring an important source of variability in the estimates, or involve computationally intensive Bayesian Markov chain Monte Carlo algorithms that do not scale well to whole-genome datasets.Results: We develop a method to infer relationships among quartets of taxa under the coalescent model using techniques from algebraic statistics. Uncertainty in the estimated relationships is quantified using the nonparametric bootstrap. The performance of our method is assessed with simulated data. We then describe how our method could be used for species tree inference in larger taxon samples, and demonstrate its utility using datasets for Sistrurus rattlesnakes and for soybeans.Availability and implementation: The method to infer the phylogenetic relationship among quartets is implemented in the software SVDquartets, available at www.stat.osu.edu/∼lkubatko/software/SVDquartets.Contact:lkubatko@stat.osu.eduSupplementary information:Supplementary data are available at Bioinformatics online.}",
+    issn = {1367-4803},
+    doi = {10.1093/bioinformatics/btu530},
+    url = {https://doi.org/10.1093/bioinformatics/btu530},
+    eprint = {https://academic.oup.com/bioinformatics/article-pdf/30/23/3317/17144977/btu530.pdf},
+}
+
+@article{bryant_snapp_2012,
+    author = {Bryant, David and Bouckaert, Remco and Felsenstein, Joseph and Rosenberg, Noah A. and RoyChoudhury, Arindam},
+    title = "{Inferring Species Trees Directly from Biallelic Genetic Markers: Bypassing Gene Trees in a Full Coalescent Analysis}",
+    journal = {Molecular Biology and Evolution},
+    volume = {29},
+    number = {8},
+    pages = {1917-1932},
+    year = {2012},
+    month = {03},
+    abstract = "{The multispecies coalescent provides an elegant theoretical framework for estimating species trees and species demographics from genetic markers. However, practical applications of the multispecies coalescent model are limited by the need to integrate or sample over all gene trees possible for each genetic marker. Here we describe a polynomial-time algorithm that computes the likelihood of a species tree directly from the markers under a finite-sites model of mutation effectively integrating over all possible gene trees. The method applies to independent (unlinked) biallelic markers such as well-spaced single nucleotide polymorphisms, and we have implemented it in SNAPP, a Markov chain Monte Carlo sampler for inferring species trees, divergence dates, and population sizes. We report results from simulation experiments and from an analysis of 1997 amplified fragment length polymorphism loci in 69 individuals sampled from six species of Ourisia (New Zealand native foxglove).}",
+    issn = {0737-4038},
+    doi = {10.1093/molbev/mss086},
+    url = {https://doi.org/10.1093/molbev/mss086},
+    eprint = {https://academic.oup.com/mbe/article-pdf/29/8/1917/13648231/mss086.pdf},
+}
