--- a/manuscript/ipcoal-biorxiv.tex
+++ b/manuscript/ipcoal-biorxiv.tex
@@ -101,7 +101,7 @@ The \emph{ipcoal} library is designed for interactive use within jupyter-noteboo
 The primary object that users interact with in \emph{ipcoal} is the Model class object (Fig. 1a). This takes a number of user supplied parameter arguments to initialize demographic and substitution models. The greatest convenience of the Model class object comes from its ability to automate the construction of a demographic model by parsing a tree object. For large phylogenies this is important; for example, to programatically describe a demographic model for a phylogenetic tree with 20 tips would require writing code in msprime to describe 39 divergence events (MassMigrations). \emph{ipcoal} uses the Python tree manipulation and plotting library \emph{toytree} \citep{eaton_toytree_2020} to parse, visualize, and annotate trees, which makes it easy to verify whether variable Ne values and admixture scenarios have been properly defined (Fig. 1a-b). 
 
 \subsection{Simulating unlinked SNPs}
-Many inference tools require the input of unlinked single nucleotide polymorphisms (SNPs) as a work around to ignore the effect of recombination (e.g., SVDquartets (...) and SNAPP (...)). \emph{ipcoal} can generate a distribution of independent genealogies, and unlinked SNPs evolved on those genealogies, using the Model.sim\_snps() function call (Fig. 1c-d). Notably, we take care that the probability a substitution is observed is proportional to the total edge lengths of the genealogy by testing each genealogy for a SNP and moving on to the next independently sampled genealogy if a SNP is not observed. By contrast, you can alternatively enforce that a SNP is placed on every visited genealogy (using the argument repeat\_on\_trees=True), which will increase the speed of simulations but introduce a bias towards shallower divergence times. 
+Many inference tools require the input of unlinked single nucleotide polymorphisms (SNPs) as a work around to ignore the effect of recombination (e.g., SVDquartets \citep{chifman_quartets_2014} and SNAPP \citep{bryant_snapp_2012}). \emph{ipcoal} can generate a distribution of independent genealogies, and unlinked SNPs evolved on those genealogies, using the Model.sim\_snps() function call (Fig. 1c-d). Notably, we take care that the probability a substitution is observed is proportional to the total edge lengths of the genealogy by testing each genealogy for a SNP and moving on to the next independently sampled genealogy if a SNP is not observed. By contrast, you can alternatively enforce that a SNP is placed on every visited genealogy (using the argument repeat\_on\_trees=True), which will increase the speed of simulations but introduce a bias towards shallower divergence times. 
 
 \subsection{Simulating loci}
 The \texttt{ipcoal.Model} object can also simulate entire chromosomes (loci) with recombination to produce a sequence of linked genealogies by calling the \texttt{Model.sim\_loci()} function. Linked genealogies are correlated since some samples share the same ancestors at neighboring genomic regions, and thus are more similar in topology and edge lengths than unlinked trees (Fig. 1d). This type of variation is increasingly of interest for genome-wide analyses.
