--- a/manuscript/ipcoal-biorxiv.tex
+++ b/manuscript/ipcoal-biorxiv.tex
@@ -71,9 +71,9 @@ $^{2}$ To whom correspondence should be addressed
 \noindent
 
 \subsection*{Abstract--}
-\textbf{Summary:} \emph{ipcoal} is a free and open source Python package for simulating and analyzing genealogies and sequences. It automates the task of describing complex demographic models (e.g., with divergence times, effective population sizes, migration events) to the msprime coalescent simulator by parsing a user-supplied species tree or network. Genealogies, sequences, and metadata are returned in tabular format allowing for easy downstream analyses. \emph{ipcoal} includes phylogenetic inference tools to automate gene tree inference from simulated sequence data, and visualization tools for analyzing results and verifying model accuracy. The \emph{ipcoal} package is a powerful tool for posterior predictive data analysis, methods validation, and for teaching coalescent methods in an interactive and visual environment. \\
+\textbf{Summary:} \emph{ipcoal} is a free and open source Python package for simulating and analyzing genealogies and sequences. It automates the task of describing complex demographic models (e.g., with divergence times, effective population sizes, migration events) to the msprime coalescent simulator by parsing a user-supplied species tree or network. Genealogies, sequences, and metadata are returned in tabular format allowing for easy downstream analyses. \emph{ipcoal} includes phylogenetic inference tools to automate gene tree inference from simulated sequence data, and visualization tools for analyzing results and verifying model accuracy. The \emph{ipcoal} package is a powerful tool for posterior predictive data analysis, for methods validation, and for teaching coalescent methods in an interactive and visual environment. \\
 
-\noindent \textbf{Availability and implementation:} Source code is available from the GitHub repository (\url{https://github.com/pmckenz1/ipcoal/}), and distributed for packaged installation with conda. Complete documentation is available at \url{https://ipcoal.readthedocs.io/}, and interactive notebooks prepared for teaching purposes are available at \url{https:/.../binder/ipcoal/}.\\
+\noindent \textbf{Availability and implementation:} Source code is available from the GitHub repository (\url{https://github.com/pmckenz1/ipcoal/}) and is distributed for packaged installation with conda. Complete documentation is available at \url{https://ipcoal.readthedocs.io/}, and interactive notebooks prepared for teaching purposes are available at \url{https:/.../binder/ipcoal/}.\\
 
 \noindent Keywords: coalescent, evolution, simulation, Python, phylogeny
 
@@ -81,36 +81,36 @@ $^{2}$ To whom correspondence should be addressed
 \bigskip
 
 \section{Introduction}
-The coalescent process \citep{kingman_coalescent_1982,hudson_testing_1983} is used to model the distribution of genealogical ancestry across a set of sampled genomes. It approximates a neutral Wright-Fisher process of random mating within populations where the expected waiting times between subsequent coalescent events can be drawn from a statistical distribution based on the effective population size. This makes simulation of genealogies under the coalescent process \citep{hudson_generating_2002} a computationally efficient approach for integrating over genealogical variation (i.e., treating it as a latent random variable) when making population genetic inferences \citep{beerli_coalescent_2001}. 
+The coalescent process \citep{kingman_coalescent_1982,hudson_testing_1983} is used to model the distribution of genealogical ancestry across a set of sampled genomes. It approximates a neutral Wright-Fisher process of random mating within populations where the expected waiting times between subsequent coalescent events can be drawn from a statistical distribution based on the effective population size. Simulation of genealogies under the coalescent process \citep{hudson_generating_2002} is a computationally efficient approach for integrating over genealogical variation (i.e., treating it as a latent random variable) when making population genetic inferences \citep{beerli_coalescent_2001}. 
 
-Demographic models describe the parameters involved in a coalescent simulation. Highly complex models may include factors such as changes in population sizes, population divergence times, and gene flow (admixture) between populations. For example, in the study of human population history, a demographic model may describe the divergence of human populations among different continents, the expansion of these population sizes separately in Africa, Eurasia, and the Americas, and subsequent admixture among populations \citep{reich_who_2018,green_neandertal_2010,gronau_demography_2011}. Demographic models are also routinely used in phylogenetics, where the goal is to jointly infer a topology (i.e., the relationships among connected populations) in addition to the parameters of a demographic model applied to the topology \citep{degnan_gene_2009,knowles_estimating_2011}. 
+Demographic models specify the parameters of a coalescent simulation. Highly complex models may include population sizes, population divergence times, and gene flow (admixture) between populations. For example, in the study of human population history, a demographic model may describe the divergence of human populations among different continents, the expansion of these populations separately in Africa, Eurasia, and the Americas, and subsequent admixture among populations \citep{reich_who_2018,green_neandertal_2010,gronau_demography_2011}. Demographic models are also routinely used in phylogenetics, with the goal of inferring a topology (i.e., the relationships among connected populations) in addition to the parameters of a demographic model applied to the topology \citep{degnan_gene_2009,knowles_estimating_2011}. 
 
-The ability to simulate realistic sequence data evolving on genealogies sampled from complex demographic models has enabled new types of inference from genomic data, from fitting parameters to demographic models and performing model comparisons \citep{chung_bayesian_2017}; to performing posterior predictive data analyses \citep{brown_predictive_2014}; to generating training datasets for machine learning methods \citep{schrider_learning_2017} or validating new inference methods \citep{adrion_community_maintained_2019}. Despite the impressive design and capabilities of recent state-of-the-art coalescent simulation tools, like msprime \citep{kelleher_efficient_2016}, it is difficult for a single package to be optimized for all types of use. To this end, msprime lacks functionality in several ways that limit its utility for studying deeper-scale (e.g., phylogenetic) data sets. Here we describe a new Python package, \emph{ipcoal}, which acts as a wrapper around msprime with the aim of filling this niche: to provide a simple method for simulating genealogies and sequences on species trees or networks for phylogenetic-scale analyses.
+The ability to simulate realistic sequence data evolving on genealogies sampled from complex demographic models has enabled new types of inference from genomic data, from fitting parameters to demographic models and performing model comparisons \citep{chung_bayesian_2017}; to performing posterior predictive data analyses \citep{brown_predictive_2014}; to generating training datasets for machine learning methods \citep{schrider_learning_2017}; to validating new inference methods \citep{adrion_community_maintained_2019}. Despite the impressive capabilities of recent state-of-the-art coalescent simulation tools like msprime \citep{kelleher_efficient_2016}, it is difficult for a single package to be optimized for all types of use. To this end, msprime lacks functionality in ways that limit its utility for studying deeper-scale (e.g., phylogenetic) datasets. Here we describe a new Python package, \emph{ipcoal}, which wraps around msprime with the aim of filling this niche: to provide a simple method for simulating genealogies and sequences on species trees or networks for phylogenetic-scale analyses.
 
 \section{Phylogenomic data simulation}
 We make the following distinctions among terms in \emph{ipcoal}: a genealogy is the true history of ancestry among a set of sampled genes; a gene tree is an empirical estimate of a genealogy based on sequences from some region of the genome; and a species tree is a demographic model including a topology \citep{pamilo_relationships_1988,maddison_gene_1997}. As phylogenetics transitions from a focus on multi-locus data sets \citep{knowles_estimating_2011} to the analysis of whole genomes -- and the spatial distribution of correlated genealogical variation along chromosomes -- the distinction between unobservable genealogical variation and the empirical gene tree estimates that can be made from observable sequence data will become increasingly relevant. 
 
-Simulating realistic sequence data under the multispecies coalescent model has typically been achieved through a two-step approach: a set of independent genealogies is first simulated, and then a model of sequence evolution is applied to model substitution along the edges of each tree to produce sequence alignments. This phylogenetic workflow differs from standard population-level coalescent simulations in several ways: (1) phylogenies generally contain many more lineages than population genetic analyses which makes describing demographic models to coalescent simulators burdensome and error-prone; (2) the phylogenetic workflow typically ignores recombination, but such data can now be simulated easily by modern coalescent software; and (3) the phylogenetic workflow applies a Markov model of sequence substitution rather than the more simple infinite-sites process, and therefore allows for more complex substitution models that can include homoplasy. In \emph{ipcoal} we have combined the best aspects of each approach so that it is easy to describe demographic models for large trees, sequence data can be simulated on independent or linked genealogies, and sequence data can be simulated under complex models of sequence evolution. 
+Simulating realistic sequence data under the multispecies coalescent model has typically involved a two-step approach: a set of independent genealogies is first simulated, and then a model of sequence evolution is applied along the edges of each tree to produce sequence alignments. This phylogenetic workflow differs from standard population-level coalescent simulations in several ways: (1) phylogenies generally contain many more lineages than population genetic models which makes describing them to coalescent simulators burdensome and error-prone; (2) the phylogenetic workflow typically ignores recombination, but such data can now be simulated easily by modern coalescent software; and (3) the phylogenetic workflow applies a Markov model of sequence evolution rather than the more simple infinite-sites process, allowing for homoplasy and asymmetrical substitution rates. In \emph{ipcoal} we have combined the best aspects of each approach so that it is easy to describe demographic models for large trees, to simulate independent or linked genealogies, and to generate sequences under complex models of sequence evolution. 
 
 \section{Implementation}
 \label{sec:headings}
 \subsection{Reproducible and robust workflow}
-The \emph{ipcoal} library is designed for interactive use within jupyter-notebooks \citep{kluyver_jupyter_2016}, where simulations can be run in the same document as downstream statistical analyses; visualization tools can be used to validate model accuracy; and code, figures, and results are easily organized into reproducible and shareable documents. The code is designed to be easy to use, and follows a minimalist and object-oriented design with few user-facing classes and functions.
+The \emph{ipcoal} library is designed for interactive use within jupyter-notebooks \citep{kluyver_jupyter_2016}, where simulations can be run in the same document as downstream statistical analyses; visualization tools can be used to validate model accuracy; and code, figures, and results are easily organized into reproducible and shareable documents. The code is designed to be easy to use, following a minimalist and object-oriented design with few user-facing classes and functions.
 
 \subsection{Defining demographic models}
-The primary object that users interact with in \emph{ipcoal} is the Model class object (Fig. 1a). This takes a number of user supplied parameter arguments to initialize demographic and substitution models. The greatest convenience of the Model class object comes from its ability to automate the construction of a demographic model by parsing a tree object. For large phylogenies this is important; for example, to programatically describe a demographic model for a phylogenetic tree with 20 tips would require writing code in msprime to describe 39 divergence events (MassMigrations). \emph{ipcoal} uses the Python tree manipulation and plotting library \emph{toytree} \citep{eaton_toytree_2020} to parse, visualize, and annotate trees, which makes it easy to verify whether variable Ne values and admixture scenarios have been properly defined (Fig. 1a-b). 
+The primary object that users interact with in \emph{ipcoal} is the \texttt{Model} class object (Fig. 1a), which takes a number of user-supplied parameter arguments to initialize demographic and substitution models. The greatest convenience of the \texttt{Model} class object comes from its ability to automate the construction of a demographic model by parsing a tree object. For large phylogenies this is important. For example, describing a demographic model for a phylogenetic tree with 20 tips in msprime would require writing code that describes 39 divergence events (MassMigrations). \emph{ipcoal} uses the Python tree manipulation and plotting library \emph{toytree} \citep{eaton_toytree_2020} to parse, visualize, and annotate trees, making it easy to verify whether variable Ne values and admixture scenarios have been properly defined (Fig. 1a-b). 
 
 \subsection{Simulating unlinked SNPs}
-Many inference tools require the input of unlinked single nucleotide polymorphisms (SNPs) as a work around to ignore the effect of recombination (e.g., SVDquartets \citep{chifman_quartets_2014} and SNAPP \citep{bryant_snapp_2012}). \emph{ipcoal} can generate a distribution of independent genealogies, and unlinked SNPs evolved on those genealogies, using the Model.sim\_snps() function call (Fig. 1c-d). Notably, we take care that the probability a substitution is observed is proportional to the total edge lengths of the genealogy by testing each genealogy for a SNP and moving on to the next independently sampled genealogy if a SNP is not observed. By contrast, you can alternatively enforce that a SNP is placed on every visited genealogy (using the argument repeat\_on\_trees=True), which will increase the speed of simulations but introduce a bias towards shallower divergence times. 
+Many inference tools require the input of unlinked single nucleotide polymorphisms (SNPs) to bypass the effect of recombination (e.g., SVDquartets \citep{chifman_quartets_2014} and SNAPP \citep{bryant_snapp_2012}). \emph{ipcoal} can generate a distribution of independent genealogies, and unlinked SNPs evolved on those genealogies, using the \texttt{Model.sim\_snps()} function call (Fig. 1c-d). Notably, we take care that the probability with which a substitution is observed is proportional to the total edge lengths of the genealogy by testing each genealogy for a SNP and moving on to the next independently sampled genealogy if a SNP is not observed. By contrast, users can alternatively enforce that a SNP is placed on every visited genealogy (using the argument \texttt{repeat\_on\_trees=True}), which will increase the speed of simulations but introduce a bias towards shallower divergence times. 
 
 \subsection{Simulating loci}
-The \texttt{ipcoal.Model} object can also simulate entire chromosomes (loci) with recombination to produce a sequence of linked genealogies by calling the \texttt{Model.sim\_loci()} function. Linked genealogies are correlated since some samples share the same ancestors at neighboring genomic regions, and thus are more similar in topology and edge lengths than unlinked trees (Fig. 1d). This type of variation is increasingly of interest for genome-wide analyses.
+The \texttt{ipcoal.Model} object can also simulate entire chromosomes (loci) with recombination by calling the \texttt{Model.sim\_loci()} function. This produces sequences of linked genealogies. Nearby genealogies are correlated since some samples share the same ancestors at neighboring genomic regions, and thus are more similar in topology and edge lengths than unlinked trees (Fig. 1d). This type of variation is increasingly of interest for genome-wide analyses.
 
 \subsection{Simulating sequence evolution}
-To simulate sequence data on genealogies in \emph{ipcoal} a Markov model of sequence evolution is applied iteratively to each edge of the tree from root to tips. We have implemented this sequence simulator using just-in-time compiled code to achieve high performance. We additionally provide the option to use the external tool seq-gen \citep{rambaut_seqgen_1997}, which offers a larger range of models than we currently support. Our internal implementation is used by default since it achieves faster speeds by avoiding repeated subprocess calls. The documentation includes test notebooks demonstrating that our implementation converges to the same results as seq-gen.
+To simulate sequence data on genealogies in \emph{ipcoal}, a continuous-time Markov substitution model is applied iteratively to each edge of the tree from root to tips. We have implemented this sequence simulator using just-in-time compiled code to achieve high performance. We additionally provide the option of using the external tool seq-gen \citep{rambaut_seqgen_1997}, which offers a larger range of models than we currently support. Our internal implementation is used by default since it achieves faster speeds by avoiding repeated subprocess calls. The documentation includes test notebooks demonstrating that our implementation converges to the same results as seq-gen.
 
 \subsection{Results}
-Upon calling a simulation function two results are stored to the Model object, a sequence array (Model.seqs) and a dataframe with the genealogy and statistics about each genealogical window (Model.df). The sequence array can be written to disk in Nexus or Phylip format, and as separate or concatenated loci, and the DataFrame can be saved as a CSV (Fig. 1e-f). However, to simplify analytical workflows, we provide convenience functions for inferring gene trees directly from sequence data which avoids the need to work with and organize many files.
+Upon calling a simulation function, two results are stored to the \texttt{Model} object: a sequence array (\texttt{Model.seqs}) and a dataframe with the genealogy and statistics about each genealogical window (\texttt{Model.df}). The sequence array can be written to disk in Nexus or Phylip format, and as separate or concatenated loci, and the DataFrame can be saved as a CSV (Fig. 1e-f). However, to simplify analytical workflows, we provide convenience functions for inferring gene trees directly from sequence data, avoiding the need to organize many files.
 
 \section{Conclusions}
 \label{sec:conclusions}
