--- a/manuscript/ipcoal-biorxiv.bib
+++ b/manuscript/ipcoal-biorxiv.bib
@@ -359,3 +359,34 @@ year = {2011}
     url = {https://doi.org/10.1093/molbev/mss086},
     eprint = {https://academic.oup.com/mbe/article-pdf/29/8/1917/13648231/mss086.pdf},
 }
+
+@article{adams_binning_2019,
+title = "Statistical binning leads to profound model violation due to gene tree error incurred by trying to avoid gene tree error",
+journal = "Molecular Phylogenetics and Evolution",
+volume = "134",
+pages = "164 - 171",
+year = "2019",
+issn = "1055-7903",
+doi = "https://doi.org/10.1016/j.ympev.2019.02.012",
+url = "http://www.sciencedirect.com/science/article/pii/S1055790318305153",
+author = "Richard H. Adams and Todd A. Castoe",
+keywords = "Phylogenetic inference, Phylogenomics, Species trees, Concatenation, Coalescent, Supergene",
+abstract = "Fundamental to all phylogenomic studies is the notion that increasing the amount of data – to entire genomes when possible – will increase the accuracy of phylogenetic inference. Simply adding more data does not, however, guarantee phylogenomic inferences will be more accurate. Even genome-scale reconstructions of species histories can suffer the effects of both incomplete lineage sorting (ILS) and gene tree estimation error (GTEE). Weighted statistical binning was originally proposed as a technique to assist the avian phylogenomics project in solving the bird tree of life, which has long eluded resolution as a result of both ILS and GTEE. These so-called “statistical binning procedures” seek to overcome GTEE by concatenating loci into longer multi-locus “supergenes” that are used to reconstruct a species tree under the assumption that the supergene tree set is an accurate estimate of the true underlying gene tree distribution. Here we evaluate the performance of the method using the original avian phylogenomics dataset. Our results suggest that statistical binning constructs false supergenes that concatenate loci with different coalescent histories more often than not: >92% of supergenes comprise discordant loci. Our results underscore a major logical inconsistency: GTEE – the sole justification for using statistical binning instead of standard concatenation – also makes these methods unreliable. These findings underscore the need for developing new robust frameworks for phylogenomic inference that more appropriately accommodate GTEE and ILS at a genome-wide scale."
+}
+
+@Article{posada_recombination_2002,
+author="Posada, David 
+and Crandall, Keith A. ",
+title="The Effect of Recombination on the Accuracy of Phylogeny Estimation",
+journal="Journal of Molecular Evolution",
+year="2002",
+month="Mar",
+day="01",
+volume="54",
+number="3",
+pages="396--402",
+abstract="Phylogenetic studies based on DNA sequences typically ignore the potential occurrence of recombination, which may produce different alignment regions with different evolutionary histories. Traditional phylogenetic methods assume that a single history underlies the data. If recombination is present, can we expect the inferred phylogeny to represent any of the underlying evolutionary histories? We examined this question by applying traditional phylogenetic reconstruction methods to simulated recombinant sequence alignments. The effect of recombination on phylogeny estimation depended on the relatedness of the sequences involved in the recombinational event and on the extent of the different regions with different phylogenetic histories. Given the topologies examined here, when the recombinational event was ancient, or when recombination occurred between closely related taxa, one of the two phylogenies underlying the data was generally inferred. In this scenario, the evolutionary history corresponding to the majority of the positions in the alignment was generally recovered. Very different results were obtained when recombination occurred recently among divergent taxa. In this case, when the recombinational breakpoint divided the alignment in two regions of similar length, a phylogeny that was different from any of the true phylogenies underlying the data was inferred.",
+issn="1432-1432",
+doi="10.1007/s00239-001-0034-9",
+url="https://doi.org/10.1007/s00239-001-0034-9"
+}
