--- a/manuscript/ipcoal-biorxiv.tex
+++ b/manuscript/ipcoal-biorxiv.tex
@@ -88,7 +88,7 @@ Demographic models specify the parameters of a coalescent simulation. Highly com
 The ability to simulate realistic sequence data evolving on genealogies sampled from complex demographic models has enabled new types of inference from genomic data, from fitting parameters to demographic models and performing model comparisons \citep{chung_bayesian_2017}; to performing posterior predictive data analyses \citep{brown_predictive_2014}; to generating training datasets for machine learning methods \citep{schrider_learning_2017}; to validating new inference methods \citep{adrion_community_maintained_2019}. Despite the impressive capabilities of recent state-of-the-art coalescent simulation tools like msprime \citep{kelleher_efficient_2016}, it is difficult for a single package to be optimized for all types of use. To this end, msprime lacks functionality in ways that limit its utility for studying deeper-scale (e.g., phylogenetic) datasets. Here we describe a new Python package, \emph{ipcoal}, which wraps around msprime with the aim of filling this niche: to provide a simple method for simulating genealogies and sequences on species trees or networks for phylogenetic-scale analyses.
 
 \section{Phylogenomic data simulation}
-We make the following distinctions among terms in \emph{ipcoal}: a genealogy is the true history of ancestry among a set of sampled genes; a gene tree is an empirical estimate of a genealogy based on sequences from some region of the genome; and a species tree is a demographic model including a topology \citep{pamilo_relationships_1988,maddison_gene_1997}. As phylogenetics transitions from a focus on multi-locus data sets \citep{knowles_estimating_2011} to the analysis of whole genomes -- and the spatial distribution of correlated genealogical variation along chromosomes -- the distinction between unobservable genealogical variation and the empirical gene tree estimates that can be made from observable sequence data will become increasingly relevant. 
+We make the following distinctions among terms in \emph{ipcoal}: a genealogy is the true history of ancestry among a set of sampled genes; a gene tree is an empirical estimate of a genealogy based on sequences from some region of the genome; and a species tree is a demographic model including a topology \citep{pamilo_relationships_1988,maddison_gene_1997}. As phylogenetics transitions from a focus on multi-locus data sets \citep{knowles_estimating_2011} to the analysis of whole genomes -- and the spatial distribution of correlated genealogical variation along chromosomes -- the distinction between unobservable genealogical variation and the empirical gene tree estimates that can be made from observable sequence data will become increasingly relevant \citep{posada_recombination_2002,adams_binning_2019}. 
 
 Simulating realistic sequence data under the multispecies coalescent model has typically involved a two-step approach: a set of independent genealogies is first simulated, and then a model of sequence evolution is applied along the edges of each tree to produce sequence alignments. This phylogenetic workflow differs from standard population-level coalescent simulations in several ways: (1) phylogenies generally contain many more lineages than population genetic models which makes describing them to coalescent simulators burdensome and error-prone; (2) the phylogenetic workflow typically ignores recombination, but such data can now be simulated easily by modern coalescent software; and (3) the phylogenetic workflow applies a Markov model of sequence evolution rather than the more simple infinite-sites process, allowing for homoplasy and asymmetrical substitution rates. In \emph{ipcoal} we have combined the best aspects of each approach so that it is easy to describe demographic models for large trees, to simulate independent or linked genealogies, and to generate sequences under complex models of sequence evolution. 
 
@@ -101,7 +101,7 @@ The \emph{ipcoal} library is designed for interactive use within jupyter-noteboo
 The primary object that users interact with in \emph{ipcoal} is the \texttt{Model} class object (Fig. 1a), which takes a number of user-supplied parameter arguments to initialize demographic and substitution models. The greatest convenience of the \texttt{Model} class object comes from its ability to automate the construction of a demographic model by parsing a tree object. For large phylogenies this is important. For example, describing a demographic model for a phylogenetic tree with 20 tips in msprime would require writing code that describes 39 divergence events (MassMigrations). \emph{ipcoal} uses the Python tree manipulation and plotting library \emph{toytree} \citep{eaton_toytree_2020} to parse, visualize, and annotate trees, making it easy to verify whether variable Ne values and admixture scenarios have been properly defined (Fig. 1a-b). 
 
 \subsection{Simulating unlinked SNPs}
-Many inference tools require the input of unlinked single nucleotide polymorphisms (SNPs) to bypass the effect of recombination (e.g., SVDquartets \citep{chifman_quartets_2014} and SNAPP \citep{bryant_snapp_2012}). \emph{ipcoal} can generate a distribution of independent genealogies, and unlinked SNPs evolved on those genealogies, using the \texttt{Model.sim\_snps()} function call (Fig. 1c-d). Notably, we take care that the probability with which a substitution is observed is proportional to the total edge lengths of the genealogy by testing each genealogy for a SNP and moving on to the next independently sampled genealogy if a SNP is not observed. By contrast, users can alternatively enforce that a SNP is placed on every visited genealogy (using the argument \texttt{repeat\_on\_trees=True}), which will increase the speed of simulations but introduce a bias towards shallower divergence times. 
+Many inference tools require the input of unlinked single nucleotide polymorphisms (SNPs) to bypass the effect of recombination (e.g., SVDquartets \citep{chifman_quartets_2014} and SNAPP \citep{bryant_snapp_2012}). \emph{ipcoal} can generate a distribution of independent genealogies, and unlinked SNPs evolved on those genealogies, using the \texttt{Model.sim\_snps()} function call (Fig. 1c-d). Notably, we take care that the probability with which a substitution is observed is proportional to the total edge lengths of the genealogy by testing each genealogy for a SNP and moving on to the next independently sampled genealogy if a SNP is not observed. By contrast, users can alternatively enforce that a SNP is placed on every visited genealogy (using the argument \texttt{repeat\_on\_trees=True}), which will increase the speed of simulations but introduce a bias toward shallower divergence times. 
 
 \subsection{Simulating loci}
 The \texttt{ipcoal.Model} object can also simulate entire chromosomes (loci) with recombination by calling the \texttt{Model.sim\_loci()} function. This produces sequences of linked genealogies. Nearby genealogies are correlated since some samples share the same ancestors at neighboring genomic regions, and thus are more similar in topology and edge lengths than unlinked trees (Fig. 1d). This type of variation is increasingly of interest for genome-wide analyses.
